fix font color on iphone

--- a/src/app/components/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.scss
@@ -14,11 +14,16 @@
   align-items: center;
   justify-content: center;
   transition: all 0.2s ease;
+  color: #000;
 
   h3 {
     margin-top: 0.75em;
-    color: #000;
     font-size: 1rem;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -webkit-text-size-adjust: none;
+    color: inherit;
+    text-decoration: none;
   }
 
   &:hover {
